--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
         </script>
         <script src="pixi.js"></script>
         <script src="game.js"></script>
+        <script src="tweenjs.min.js"></script>
     </body>
 </html>
